force-app/main/default/objects/Trainer__c/fields/Game_Version__c.field-meta.xml
<CustomField>
    <fullName>Game_Version__c</fullName>
    <label>Game Version</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shield</fullName>
            </value>
            <value>
                <fullName>Sword</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>