force-app/main/default/objects/Trainer__c/fields/Total_Available_Pokemon__c.field-meta.xml
<CustomField>
    <fullName>Total_Available_Pokemon__c</fullName>
    <inlineHelpText>Total amount of pokémon currently available.</inlineHelpText>
    <label>Total Available Pokémon</label>
    <summaryForeignKey>Trainer_pokemon__c.Trainer__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>