force-app/main/default/objects/Trainer__c/fields/Total_Unique_Caught__c.field-meta.xml
<CustomField>
    <fullName>Total_Unique_Caught__c</fullName>
    <inlineHelpText>How many unique pokémon have been caught.</inlineHelpText>
    <label>Total Unique Caught</label>
    <summaryFilterItems>
        <field>Trainer_pokemon__c.Acquired__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Trainer_pokemon__c.Trainer__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>