force-app/main/default/objects/Trainer__c/listViews/All_Trainers.listView-meta.xml
<ListView>
    <fullName>All_Trainers</fullName>
    <columns>NAME</columns>
    <columns>Game_Version__c</columns>
    <columns>Total_Unique_Caught__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Trainers</label>
</ListView>